<resources>
    <string name="app_name">LoginNEFG</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="nefg">NEFG</string>
    <string name="login">Login</string>
    <string name="correo">Email Address</string>
    <string name="usuario">User Name</string>
    <string name="contraseña">Password</string>
    <string name="c_contraseña">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
    <string name="sing_up">Sign Up</string>
    <string name="already_a">Already have an account.</string>
    <string name="buscar">Buscar</string>
    <string name="Listas">Listas</string>
    <string name="Perfil">Perfil</string>
    <string name="qu_est_s_buscando">¿Qué estás buscando?</string>

    <string name="facebook_app_id" translatable="false">2760923163920977</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2760923163920977</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurante_1">Restaurante 1</string>
    <string name="desayuno">Desayuno</string>
    <string name="almuerzo">Almuerzo</string>
    <string name="cena">Cena</string>
    <string name="caf">Café</string>
    <string name="postres">Postres</string>
    <string name="bar">Bar</string>
    <string name="lugares_visitados">Lugares visitados</string>
    <string name="destacados">Destacados</string>
    <string name="tus_lugares">Tus Lugares</string>
    <string name="lugares_guardados">Lugares guardados</string>
    <string name="lugares_favoritos">Lugares favoritos</string>
    <string name="crear_lista">Crear lista</string>
    <string name="filtros">Filtros</string>
    <string name="cerca_de_m">Cerca de mí</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_info_restaurante">InfoRestauranteActivity</string>
    <string name="tab_text_1">Destacado</string>
    <string name="tab_text_2">Info</string>
    <string name="tab_text_3">Fotos</string>
    <string name="tab_text_4">Comentarios</string>
    <string name="valoraci_n">Valoración</string>
    <string name="direcci_n">Dirección</string>
    <string name="horario">Horario</string>
    <string name="ver_en_google_maps">Ver en Google Maps</string>
</resources>
