<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_splash">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:layout_margin="10dp">

        <ImageView android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:src="@drawable/logo"
                   android:layout_gravity="center"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvRegistrarse"
                android:text="@string/register"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginBottom="20dp"
        />

        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar2"
                android:indeterminate="true"
                android:visibility="gone"
        />

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/etUsuario_Registro"
                  android:layout_marginTop="15dp"
                  android:hint="@string/usuario"
                  android:inputType="text"
                  android:drawablePadding="10dp"
                  android:drawableStart="@drawable/usuario"
        />

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/etCorreo_Registro"
                  android:layout_marginTop="15dp"
                  android:hint="@string/correo"
                  android:inputType="textEmailAddress"
                  android:drawablePadding="10dp"
                  android:drawableStart="@drawable/correo"
        />

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/etContraseña_Registro"
                  android:layout_marginTop="15dp"
                  android:hint="@string/contraseña"
                  android:inputType="textPassword"
                  android:drawablePadding="10dp"
                  android:drawableStart="@drawable/candado"
        />

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/etConfirm_Registro"
                  android:layout_marginTop="15dp"
                  android:hint="@string/c_contraseña"
                  android:inputType="textPassword"
                  android:drawablePadding="10dp"
                  android:drawableStart="@drawable/iconocontra"
        />

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btRegistrarse"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/sing_up"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@color/boton_login"
        />

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/tvAlready"
                  android:text="@string/already_a"
                  android:layout_marginTop="20dp"
                  android:layout_gravity="center"
        />

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/tvAlready_Account"
                  android:text="@string/login"
                  android:textStyle="bold"
                  android:textAllCaps="true"
                  android:textColor="@color/boton_login"
                  android:layout_marginTop="5dp"
                  android:clickable="true"
                  android:layout_gravity="center"

        />


    </LinearLayout>

</ScrollView>