<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".LoginActivity">

        <ImageView android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1"
                   android:src="@drawable/restaurant"
        />

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="0dp"
                      android:layout_weight="1"
                      android:orientation="vertical"
                      android:paddingLeft="50dp"
                      android:paddingRight="50dp">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/tvLogin"
                      android:text="@string/login"
                      android:textStyle="bold"
                      android:textSize="30sp"

            />

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/etCorreo"
                      android:layout_marginTop="5dp"
                      android:hint="@string/correo"
                      android:inputType="textEmailAddress"
                      android:drawablePadding="10dp"
                      android:drawableStart="@drawable/correo"
            />

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/etContraseña"
                      android:layout_marginTop="5dp"
                      android:hint="@string/contraseña"
                      android:inputType="textPassword"
                      android:drawablePadding="10dp"
                      android:drawableStart="@drawable/candado"
            />

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btLogearse"
                    android:layout_marginTop="15dp"
                    android:text="@string/login"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:background="@color/boton_login"
            />

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/tvRegistrarse"
                      android:layout_gravity="center"
                      android:layout_marginTop="25dp"
                      android:text="@string/create_account"
                      android:textStyle="italic"
                      android:textSize="17sp"
                      android:clickable="true"
            />

        </LinearLayout>

    </LinearLayout>
