<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whitesmoke">

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/destacados"
                  android:textColor="@color/black"
                  android:padding="15dp"
        />

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/recycler_Des"
                android:padding="15dp"
        >

        </androidx.recyclerview.widget.RecyclerView>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/tus_lugares"
                  android:textColor="@color/black"
                  android:padding="15dp"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <LinearLayout android:layout_width="0dp"
                          android:layout_height="130dp"
                          android:layout_weight="1"
                          android:orientation="vertical"
                          android:background="@color/beige"
                          android:layout_margin="5dp">

                <ImageView android:layout_width="40dp"
                           android:layout_height="40dp"
                           android:src="@drawable/save"
                           android:layout_marginTop="25dp"
                           android:layout_gravity="center"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/lugares_guardados"
                          android:textColor="@color/steelblue"
                          android:padding="15dp"
                          android:layout_gravity="center"
                />

            </LinearLayout>

            <LinearLayout android:layout_width="0dp"
                          android:layout_height="130dp"
                          android:layout_weight="1"
                          android:orientation="vertical"
                          android:background="@color/beige"
                          android:layout_margin="5dp">

                <ImageView android:layout_width="40dp"
                           android:layout_height="40dp"
                           android:src="@drawable/star"

                           android:layout_marginTop="25dp"
                           android:layout_gravity="center"/>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/lugares_favoritos"
                          android:textColor="@color/steelblue"
                          android:padding="15dp"
                          android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

        <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="6dp"
                android:background="@color/gray"
        />

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/crear_lista"
                  android:textColor="@color/black"
                  android:padding="15dp"/>

        <FrameLayout
                android:layout_width="170dp"
                android:layout_height="130dp"
                android:background="@color/beige"
        >

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:srcCompat="@android:drawable/ic_input_add"
                    android:id="@+id/floatingActionButton"
                    android:layout_gravity="center"
            />

        </FrameLayout>

    </LinearLayout>

</ScrollView>
